# CVE_DataMining_Research

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Calculations.markdown  Makefile  README.md  Stats  cmake_install.cmake  desktop.ini  filelist.txt
data/: CAPEC.csv  CPE.csv  CWE.csv  CWE_CAPEC.csv
export/: CVE_1999_0001.json  CVE_1999_0005.json  CVE_1999_0006.json  CVE_1999_0007.json  CVE_1999_0010.json  CVE_1999_0012.json  CVE_1999_0014.json  CVE_1999_0018.json  CVE_1999_0019.json  CVE_1999_0021.json  CVE_1999_0027.json  CVE_1999_0029.json  CVE_1999_0030.json  CVE_1999_0032.json  CVE_1999_0035.json  CVE_1999_0036.json  CVE_1999_0037.json  CVE_1999_0039.json  CVE_1999_0042.json  CVE_1999_0044.json  CVE_1999_0045.json  CVE_1999_0047.json  CVE_1999_0048.json  CVE_1999_0050.json  CVE_1999_0052.json  CVE_1999_0053.json  CVE_1999_0054.json  CVE_1999_0055.json  CVE_1999_0056.json  CVE_1999_0063.json  CVE_1999_0064.json  CVE_1999_0065.json  CVE_1999_0066.json  CVE_1999_0068.json  CVE_1999_0069.json  CVE_1999_0072.json  CVE_1999_0073.json  CVE_1999_0074.json  CVE_1999_0075.json  CVE_1999_0076.json  (+44222 more)
include/: Calculation.h  JsonHelper.h
rawdata/: CVE_1999_0002.json  CVE_1999_0003.json  CVE_1999_0004.json  CVE_1999_0008.json  CVE_1999_0009.json  CVE_1999_0011.json  CVE_1999_0013.json  CVE_1999_0015.json  CVE_1999_0016.json  CVE_1999_0017.json  CVE_1999_0020.json  CVE_1999_0022.json  CVE_1999_0023.json  CVE_1999_0024.json  CVE_1999_0025.json  CVE_1999_0026.json  CVE_1999_0028.json  CVE_1999_0031.json  CVE_1999_0033.json  CVE_1999_0034.json  CVE_1999_0038.json  CVE_1999_0040.json  (+31255 more)
(+6 files in other folders)
